# jxa-builder

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml
jxa_builder/: cli.py
jxa_builder/commands/: _shared_options.py  build.py  build_bak.py  freeze_nodejs_deps.py  install.py  uninstall.py
jxa_builder/core/: compile.py  constants.py  get_dependency_modules.py  get_dependyncy_paths.py  get_project_config.py  manage_outputs.py  models.py  modify_app_internals.py
jxa_builder/utils/: click_importer.py  logger.py  printit.py  recase.py  remove_empty_values.py
old/: build.py  build.sh  build1.py  build_bak1.py  build_old.py  click_test.py  get_config.py  main.py  manage_output.py  png2icns.applescript  recase.py  test.py  test2.py  uninstaller.js
tests/test_jxa/: jxa.json
tests/test_jxa/src/: index.js
tests/test_jxa/src/a/: index.js
tests/test_jxa/src/a/b/: c.js  index.js
