[tool.yapf]
based_on_style = 'pep8'
indent_width = 2

# yapf --recursive --in-place .

[tool.poetry]
name = "jxa-builder"
version = "0.1.0"
description = "Javascript for Automation build system"
authors = ["seb0xff <contact.git@seb0xff.dev>"]
license = "BSD-4-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.5.2"
rich-click = "^1.7.2"
typing-extensions = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
